--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.pythonPath": "env/bin/python",
     "git.ignoreLimitWarning": true,
-    "eslint.enable": true
+    "eslint.enable": true,
+    "python.formatting.provider": "black"
 }
